--- a/.env
+++ b/.env
@@ -1,2 +1,25 @@
 VITE_API_URL=http://localhost:8000/api
 VITE_RECAPTCHA_SITE_KEY=6LcxH8MrAAAAAEJQdX6E7UtbjTZxE8RTlTBcEuv3
+
+# API URLs
+REACT_APP_USERS_API_URL=http://localhost:8000/api
+REACT_APP_JOBS_API_URL=http://localhost:8001/api/jobs
+REACT_APP_BIDS_API_URL=http://localhost:8002/api/bids
+
+# Alternative: If using nginx gateway
+# REACT_APP_API_BASE_URL=http://localhost:8080/api
+# REACT_APP_USERS_API_URL=http://localhost:8080/api/users
+# REACT_APP_JOBS_API_URL=http://localhost:8080/api/jobs
+# REACT_APP_BIDS_API_URL=http://localhost:8080/api/bids
+
+# App Configuration
+REACT_APP_NAME=BidWork
+REACT_APP_VERSION=1.0.0
+
+# File Upload Limits
+REACT_APP_MAX_FILE_SIZE=10485760
+REACT_APP_MAX_FILES_PER_UPLOAD=5
+
+# Features
+REACT_APP_ENABLE_NOTIFICATIONS=true
+REACT_APP_ENABLE_REAL_TIME_UPDATES=true
