--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
-    "lucide-react": "^0.542.0",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-google-recaptcha": "^3.1.0",
     "react-google-recaptcha-v3": "^1.11.0",
     "react-router-dom": "^7.8.2",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
