--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-VITE_API_URL=https://kamcomuser.duckdns.org:30443/api
+VITE_API_URL=https://kamcomuser.duckdns.org/api
 VITE_RECAPTCHA_SITE_KEY=6LcxH8MrAAAAAEJQdX6E7UtbjTZxE8RTlTBcEuv3
 
 # API URLs
-REACT_APP_USERS_API_URL=https://kamcomuser.duckdns.org:30443/api
-REACT_APP_JOBS_API_URL=https://kamcomuser.duckdns.org:30443/api/jobs
-REACT_APP_BIDS_API_URL=https://kamcomuser.duckdns.org:30443/api/bids
+REACT_APP_USERS_API_URL=https://kamcomuser.duckdns.org/api
+REACT_APP_JOBS_API_URL=https://kamcomuser.duckdns.org/api/jobs
+REACT_APP_BIDS_API_URL=https://kamcomuser.duckdns.org/api/bids
 
 # Alternative: If using nginx gateway
 # REACT_APP_API_BASE_URL=http://localhost:8080/api
